--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,12 @@
-=== 0.0.2 / 2008-?-?
+=== 0.0.2 / 2009-03-15
 
-* 1 bugfix
+* 4 bugfixes from Brian Candler
   * Bug in original Net::Telnet EOL translation 
-   (http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-core/16599) 
-   duplicate the fix.
+    (http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-core/16599) 
+    duplicate the fix.
+  * Remove rubygems require.
+  * Handle EOF more gracefully.
+  * Allow FailEOF to propagate through cmd() to waitfor().
 
 === 0.0.1 / 2008-06-06
 
