--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 0.1.1 / 2016-05-06
+* Apply fix to race condition during initialization from lumean
+
 === 0.1.0 / 2016-02-09
 * Fixed 'Timeout' and 'Waittime' options
 * Fork to net-ssh-telnet2
